force-app/main/default/objects/Compliance_Appeal_Config__c/Compliance_Appeal_Config__c.object-meta.xml
<CustomObject>
    <description>Compliance_Appeal_Config</description>
    <label>Compliance_Appeal_Config</label>
    <nameField>
        <label>Compliance_Appeal_Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance_Appeal_Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>