force-app/main/default/objects/Compliance_Appeal_Config__c/fields/Appeal_Timer__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Timer__c</fullName>
    <description>Appeal_Timer</description>
    <inlineHelpText>Appeal_Timer</inlineHelpText>
    <label>Appeal Timer (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>