force-app/main/default/objects/Compliance_Appeal_Config__c/fields/mail_days1__c.field-meta.xml
<CustomField>
    <fullName>mail_days1__c</fullName>
    <description>mail_days1</description>
    <inlineHelpText>mail_days1</inlineHelpText>
    <label>Email Days 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>