force-app/main/default/objects/Compliance_Appeal_Config__c/fields/mail_days2__c.field-meta.xml
<CustomField>
    <fullName>mail_days2__c</fullName>
    <description>mail_days2</description>
    <inlineHelpText>mail_days2</inlineHelpText>
    <label>Email Days 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>