force-app/main/default/objects/Compliance_Appeal_Config__c/fields/mail_days3__c.field-meta.xml
<CustomField>
    <fullName>mail_days3__c</fullName>
    <description>mail_days3</description>
    <inlineHelpText>mail_days3</inlineHelpText>
    <label>Email Days 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>